fix contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #b9b8b8;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -122,7 +122,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   padding-top: 10px;
-  background-color: #3397DB;
+  background-color: #0075c3;
   align-items: center;
 }
 @media screen and (max-width: 500px) {
@@ -217,7 +217,7 @@ nav h1 a {
   }
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #6b6b6b;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -231,9 +231,9 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #f18200;
   border-bottom: 3px solid #eee;
-  color: #fff;
+  color: #33324a;
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
